--- a/appsettings.json
+++ b/appsettings.json
@@ -12,7 +12,7 @@
   },
 
   "ConnectionStrings": {
-    "ConnectionBddVoxDocs": "Server=tcp:myservervoxdocs.database.windows.net,1433;Initial Catalog=bddVoxDocs;Persist Security Info=False;User ID=adminuservoxdocs;Password=10060220Fe@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "ConnectionBddVoxDocs": "Server=tcp:voxdocs.database.windows.net,1433;Initial Catalog=VoxDocs;Persist Security Info=False;User ID=CloudSA3dba09e6;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
   "Jwt": {
