--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ApiSettings": {
-    "BaseUrl": "https://voxdocs-h8afb4anf7bzdnfn.brazilsouth-01.azurewebsites.net"
+    "BaseUrl": "http://voxdocs-h8afb4anf7bzdnfn.brazilsouth-01.azurewebsites.net"
   },
 
   "ConnectionStrings": {
