--- a/appsettings.json
+++ b/appsettings.json
@@ -18,7 +18,7 @@
   },
 
   "ApiSettings": {
-    "BaseUrl": "https://voxdocs2-d0h4dzfvegexfwdj.canadacentral-01.azurewebsites.net" 
+    "BaseUrl": "https://voxdocs-h8afb4anf7bzdnfn.brazilsouth-01.azurewebsites.net" 
   },
 
   "ConnectionStrings": {
